Organize arguments content on expansion Reduce content width in a row by 50% Remove expansion button - click the content/row instead Click on link behaves also as clicking on content - fix by sending ngclick with linky event to avoid expansion or collapsing Freeze discussion when changing from student to constructor, includes, freezing all arguments dates, new way of discussion arrangment as discussed - update main thread updatedAt only by constructor restriction (undo most of previous related changes from 13/07) changed the new comment icon

--- a/client/resources/stylesheets/arguments.css
+++ b/client/resources/stylesheets/arguments.css
@@ -37,6 +37,7 @@ hr.newArgSection {
 
 .expanded {
     word-wrap: break-word;
+    white-space: pre-line;
     vertical-align: top;
 }
 
